Added arrays.
one can declare and assign from and to an array index.
(e.g. `arr[i] = 0` or `a = arr[2]`)